# pelican-lunr

./: CHANGELOG.md  pyproject.toml  setup.py
.github/workflows/: superlinter.yml
pelican/plugins/pelican_lunr/: __init__.py
